--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,33 +12,41 @@
         android:theme="@style/Theme.CarpoolClan"
         tools:targetApi="31">
         <activity
-            android:name=".EditAccountPage"
+            android:name=".ManagePlaylistPage"
+            android:exported="false" />
+        <activity
+            android:name=".WeatherWizardPage"
             android:exported="false" >
         </activity>
+        <activity
+            android:name=".EditAccountPage"
+            android:exported="false" />
         <activity
             android:name=".HomePage"
             android:exported="false" />
         <activity
             android:name=".ManageAccountPage"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".RegistrationPage"
-            android:exported="false" />
-        <activity
-            android:name=".LoginPage"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
+            android:name=".RegistrationPage"
+            android:exported="false" >
+        </activity>
+        <activity
+            android:name=".LoginPage"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".WelcomePage"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
