--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="false"/>
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +18,10 @@
         android:theme="@style/Theme.CarpoolClan"
         tools:targetApi="31">
         <activity
-            android:name=".MakeOffersPage"
+            android:name=".ViewPotentialOffersPage"
+            android:exported="false" />
+        <activity
+            android:name=".MakeRequestsPage"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,11 +30,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MakeOffersPage"
+            android:exported="false" />
+        <activity
             android:name=".ManagePlaylistPage"
             android:exported="false" />
         <activity
             android:name=".WeatherWizardPage"
             android:exported="false">
+
         </activity>
         <activity
             android:name=".EditAccountPage"
@@ -41,13 +48,13 @@
             android:exported="false" />
         <activity
             android:name=".ManageAccountPage"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".RegistrationPage"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".LoginPage"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".WelcomePage"
             android:exported="false" />
