--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,7 @@
         tools:targetApi="31">
         <activity
             android:name=".GoogleMapsInterface"
-            android:exported="true" >
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false" >
         </activity>
         <activity
             android:name=".ViewPotentialOffersPage"
@@ -39,7 +33,13 @@
         </activity>
         <activity
             android:name=".MakeOffersPage"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ManagePlaylistPage"
             android:exported="false" />
@@ -69,7 +69,7 @@
             android:exported="false" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCqqMfhkofj_jcAmwEKwqQ2_ZMzmLTOE30" /> <!-- Google Maps API Key -->
+            android:value="" /> <!-- Google Maps API Key -->
     </application>
 
 </manifest>
