--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,12 +30,8 @@
         </activity>
         <activity
             android:name=".MakeRequestsPage"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MakeOffersPage"
@@ -56,7 +52,13 @@
             android:exported="false" />
         <activity
             android:name=".ManageAccountPage"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".RegistrationPage"
             android:exported="false" />
@@ -65,7 +67,8 @@
             android:exported="false" />
         <activity
             android:name=".WelcomePage"
-            android:exported="false" />
+            android:exported="false" >
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
