--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,7 @@
         android:theme="@style/Theme.CarpoolClan"
         tools:targetApi="31">
         <activity
-            android:name=".GoogleMapsInterface"
-            android:exported="false" >
-        </activity>
-        <activity
-            android:name=".ViewPotentialOffersPage"
+            android:name=".IncomingRequestsPage"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,21 +30,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MakeRequestsPage"
+            android:name=".GoogleMapsInterface"
+            android:exported="false"></activity>
+        <activity
+            android:name=".ViewPotentialOffersPage"
             android:exported="false">
-
         </activity>
         <activity
+            android:name=".MakeRequestsPage"
+            android:exported="false"></activity>
+        <activity
             android:name=".MakeOffersPage"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".ManagePlaylistPage"
             android:exported="false" />
         <activity
             android:name=".WeatherWizardPage"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".EditAccountPage"
             android:exported="false" />
@@ -57,9 +56,7 @@
             android:exported="false" />
         <activity
             android:name=".ManageAccountPage"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".RegistrationPage"
             android:exported="false" />
@@ -68,11 +65,11 @@
             android:exported="false" />
         <activity
             android:name=".WelcomePage"
-            android:exported="false" >
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" /> <!-- Google Maps API Key -->
@@ -80,4 +77,5 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
+
 </manifest>
