--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,15 +39,17 @@
             android:exported="false"></activity>
         <activity
             android:name=".ManagePlaylistPage"
-            android:exported="false" />
-        <activity
-            android:name=".WeatherWizardPage"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".WeatherWizardPage"
+            android:exported="false" >
+
         </activity>
         <activity
             android:name=".EditAccountPage"
