--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,31 +26,29 @@
         </activity>
         <activity
             android:name=".GoogleMapsInterface"
-            android:exported="false"></activity>
+            android:exported="false"/>
         <activity
             android:name=".ViewPotentialOffersPage"
             android:exported="false">
         </activity>
         <activity
             android:name=".MakeRequestsPage"
-            android:exported="false"></activity>
+            android:exported="false"/>
         <activity
             android:name=".MakeOffersPage"
-            android:exported="false"></activity>
+            android:exported="false">
+        </activity>
         <activity
             android:name=".ManagePlaylistPage"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".WeatherWizardPage"
-            android:exported="false" >
-
-        </activity>
+            android:exported="false"/>
         <activity
             android:name=".EditAccountPage"
             android:exported="false" />
@@ -59,7 +57,7 @@
             android:exported="false" />
         <activity
             android:name=".ManageAccountPage"
-            android:exported="false"></activity>
+            android:exported="false"/>
         <activity
             android:name=".RegistrationPage"
             android:exported="false" />
@@ -68,7 +66,7 @@
             android:exported="false" />
         <activity
             android:name=".WelcomePage"
-            android:exported="false"></activity>
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="false" />
