cleaned up MixMaster, MakeRequestsPage, MakeOffersPage

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,28 +23,31 @@
         <activity
             android:name=".IncomingRequestsPage"
             android:exported="false" >
+
         </activity>
         <activity
             android:name=".GoogleMapsInterface"
             android:exported="false"/>
         <activity
-            android:name=".ViewPotentialOffersPage"
+            android:name=".PotentialOffersPage"
             android:exported="false">
+
         </activity>
         <activity
             android:name=".MakeRequestsPage"
-            android:exported="false"/>
-        <activity
-            android:name=".MakeOffersPage"
             android:exported="false">
         </activity>
         <activity
-            android:name=".ManagePlaylistPage"
-            android:exported="true" >
+            android:name=".MakeOffersPage"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ManagePlaylistPage"
+            android:exported="false" >
         </activity>
         <activity
             android:name=".WeatherWizardPage"
