--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,15 @@ buildscript {
     repositories {
         google()  // Google's Maven repository
         mavenCentral()  // Maven Central repository
-
+        jcenter()
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.squareup.okhttp3:okhttp:3.14.6'
+        classpath "com.google.android.gms:play-services-maps:10.0.1"
+
+
+
     }
 }
 plugins {
